--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/material": "^5.14.5",
     "@mui/styled-engine-sc": "^5.12.0",
     "@mui/x-data-grid": "^6.11.2",
+    "@react-icons/all-files": "^4.1.0",
     "ahooks": "^3.7.8",
     "cra-template": "1.2.0",
     "prettier": "^3.0.0",
